syntax = "proto3";

package pb;

// The Add service definition.
service Auth {
  // Signup users.
  rpc Signup (SignupRequest) returns (SignupReply) {}

  // Login users
  rpc Login (LoginRequest) returns (LoginReply) {}

  // VerifyMail users
  rpc VerifyMail (VerifyMailRequest) returns (VerifyMailReply) {}
}

// The User request contains two parameters.
message  SignupRequest {
  string ID         = 1;
  string Email      = 2;
  string Password   = 3;
  string Username   = 4;
  string TokenHash  = 5;
  bool   IsVerified = 6;
}

// The User response contains the result of the calculation.
message SignupReply {
  bool Status    = 1;
  string Message = 2;
  string data    = 3;
  string err     = 4;
}

// The Login request contains two parameters.
message LoginRequest {
  string ID         = 1;
  string Email      = 2;
  string Password   = 3;
  string Username   = 4;
  string TokenHash  = 5;
  bool   IsVerified = 6;
}

// The Login response contains the result of the concatenation.
message LoginReply {
  bool Status    = 1;
  string Message = 2;
  string data    = 3;
  string err     = 4;
}

// The VerifyMail request contains two parameters.
message VerifyMailRequest {
  string Email = 1;
  string Code  = 2;
  int32 Type  = 3;
}

// The VerifyMail response contains the result of the concatenation.
message VerifyMailReply {
  bool Status    = 1;
  string Message = 2;
  string data    = 3;
  string err     = 4;
}
